<resources>
    <string name="app_name">Habit Tracker</string>
    //added for tabs
//content xml
    <string name="Habit_tab">Home</string>
    <string name="List_Tab">List</string>
    <string name="Achievement">Achievement</string>
    <string name="MotivationButton">Motivation Button</string>

    //menu
    <string name="Home">Home</string>
    <string name="Categories">Categories</string>
    <string name="Setting">Setting</string>
    <string name="ContactUs">Contact Us</string>
    <string name="FAQ">FAQ</string>
    <string name="Login">Log In</string>
    <string name="SignIn">SignUp</string>

//HOME PAGE
    <string name="add_habit">Home</string>
    <string name="welcome_text">Welcome to habit and motivation app</string>
    <string name="motivation_text">Motivation</string>
    <string name="motivation_Insight">Click next arrow to see motivation </string>

//Login page
    <string name="LoginDetails">Enter the username and password</string>
    <string name="Username">Username</string>
    <string name="LoginPassword">Password</string>
    <string name="Cancel">Cancel</string>
    <string name="Register">Sign Up</string>
    <string name="WelcomeLogin">Welcome after login</string>

    <string name="ListHere">Add list of habit</string>
    //habit add form
    <string name="Habit_Details">Create Habit </string>
    <string name="Name">Name</string>
    <string name="Name_of_habit">Name of habit</string>
    <string name="Question">Question</string>
    <string name="ExQuestion">How much did you run ?</string>
    <string name="Unit">Unit</string>
    <string name="ExUnit">meters(Optional)</string>
    <string name="Target">Target</string>
    <string name="ExTarget">400meters</string>
    <string name="Reminder">Reminder</string>
    <string name="Notes">Notes(Optional)</string>
    <string name="Ok">OK</string>
    <string name="alertmessage">Alert message</string>
    <string name="alerttitle">Add Habit</string>
    <string name="questionforsureaddhabit">Do you want to add this habit</string>
    <string name="Addhabitclickok">You have choose OK for add Habit</string>
    <string name="AddhabitclickCancel">You have choose Cancel for add Habit</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string-array name="Reminderoption">
        <item>Off</item>
        <item>On</item>
    </string-array>

    //Registration Form
    <string name="Rname">Name</string>
    <string name="ExRname">User</string>
    <string name="Email">Email</string>
    <string name="SignUp">Sign Up</string>

    //added motivation form
    <string name="back">Back</string>
    <string name="next">Next</string>
    //add updatehabit
    <string name="Habit_Detailv">Habit Details</string>
    <string name="ModifyHabits">Modify Habit</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <string name="Completed">Completed</string>
    <string name="Modify">Modify</string>
    <string-array name="Completeoption">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    //Progress
    <string name="Details">Details</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="update">Update</string>
    <string name="Progress">Progress</string>
    <string name="today_s_date">Today\'s Date</string>
</resources>