<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Home_item"
        android:title="@string/Home"
        android:icon="@drawable/ic_home_item_icon"/>
    <item
        android:id="@+id/Categories_item"
        android:title="@string/Categories"
        android:icon="@drawable/ic_category_item_icon"
        />
    <item
        android:id="@+id/Setting_item"
        android:title="@string/Setting"
        android:icon="@drawable/ic_settings_item_icon"/>
    <item
        android:id="@+id/Rating_item"
        android:title="@string/Rating"
        android:icon="@drawable/ic_rating_item_icon"/>
    <item
        android:id="@+id/ContactUs_item"
        android:title="@string/ContactUs"
        android:icon="@drawable/ic_contactus_item_icon"/>
    <item
        android:id="@+id/login_item"
        android:title="@string/Login"
        android:icon="@drawable/ic_baseline_login_24"/>
    <item
        android:id="@+id/register_item"
        android:title="@string/SignIn"
        android:icon="@drawable/ic_baseline_person_add_24"/>

</menu>