<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motivation_text"
        />
    <Button
        android:id="@+id/cl"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ok">

    </Button>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/motivationi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/motivation_Insight"
            android:padding="5dp" />
    </ScrollView>

</LinearLayout>