<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/welcome"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_text"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/login"
        android:layout_centerHorizontal="true"
        android:text="@string/Login"
        android:layout_below="@id/welcome">
    </Button>

    <Button android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/register_button"
        android:layout_centerHorizontal="true"
        android:text="@string/Register"
        android:layout_below="@id/login">
    </Button>



</RelativeLayout>
