<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <TextView
        android:id="@+id/motivationviewwindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motivation_text"
        android:textAlignment="center">

    </TextView>

    <TextView
        android:id="@+id/window_motivation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/motivation_text"
        android:layout_below="@id/motivationviewwindow">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/window_motivation"
        android:weightSum="1.0">
        <ImageButton
            android:id="@+id/backmotivationbuttonpop"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|start"
            android:layout_weight="0.5"
            android:contentDescription="@string/back">

        </ImageButton>
        <ImageButton
            android:id="@+id/nextmotivationbuttonpop"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_navigate_next_button"
            android:contentDescription="@string/next">

        </ImageButton>
    </LinearLayout>
</RelativeLayout>